# chixEngine

./: .gitignore  CMakeLists.txt  README.md  goals.md  structure.md  structure.txt
chixLib/: CMakeLists.txt
chixLib/math/: vector.cpp  vector.h
engine/: CMakeLists.txt  Common.h
engine/core/: window.cpp  window.h
engine/game/: gameinfo.cep
engine/managers/: resourcemanagement.h
engine/program/: program.cpp  program.h
engine/renderer/: backend.cpp  backend.h  camera.h  frontend.cpp  frontend.h  renderworld.h  worldstate.h
engine/renderer/data/: backenddata.h  command.h  vertexcache.cpp  vertexcache.h
engine/renderer/gl/: vertexarray.cpp  vertexarray.h
engine/renderer/mesh/primitives/: triangle.h
engine/resources/: shader.cpp  shader.h
engine/sys/linux/: main.cpp
engine/sys/windows/: main.cpp
engine/util/: paths.h
engine/utility/: window.cpp  window.h
gameresources/shaders/: default.cfp  default.cvp
